--- a/TextQuery.vcxproj
+++ b/TextQuery.vcxproj
@@ -39,8 +39,9 @@
     <ClCompile Include="src\TextQuery.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\Ch13.h" />
-    <ClInclude Include="include\FunctionCallOp.h" />
+    <ClInclude Include="ch_17.h" />
+    <ClInclude Include="include\ch_13.h" />
+    <ClInclude Include="include\function_call_op.h" />
     <ClInclude Include="include\HasPtr.h" />
     <ClInclude Include="include\Message.h" />
     <ClInclude Include="include\Quote.h" />
